--- a/Prison Break.html
+++ b/Prison Break.html
@@ -32,13 +32,12 @@
 
             <input type="Email Address" id="Email Address" name="Email Address" placeholder="Email Address" required/><br><br>
 
-            <input type="Phone Number" id="Phone Number" name="Phone Number" placeholder="Phone Number" required/><br><br>
+            <input type="Phone Number" id="Phone Number" name="Phone Number" placeholder="Phone Number" required/><br>
 
-            <h4>Date to watch the movie</h4>
-            <input type="week"/><br><br>
+            <h4>Date to watch the movie  <input type="week"/></h4> <br>
+           
 
-            <h4>Total number of persons watching the movie</h4>
-            <input type="number" name="no" id="no"/><br><br>
+            <h4>Total number of persons watching the movie <input type="number" name="no" id="no"/></h4> <br><br>           
 
             <label for="Popcorn or Drink">Popcorn or Drink</label><br>
             <input type="radio" name="Popcorn or Drink" value="Yes"/>Yes
