--- a/My Portfolio Page.html
+++ b/My Portfolio Page.html
@@ -8,6 +8,6 @@
 
         <h1>Okafor Ezinwanne Destiny</h1>
 
-        <p>My name is Okafor Ezinwanne Destiny, I am currently an undergraduate of Microbiology from the University of Nigeria Nsukka. I have basic knowledge in tech, currently I am learning web development with Codevixen academy and it has being an amzing journey so far. My aspiration is to one day be able to make a positive impact in the world using tech. In the next five years, I see myself doing amazing things using tech, I see myself solving problems and helping humanity using tech and also with my knowledge of microbilogy. My plans for mysefl in the tech field is to keep improving, keep becoming better and continue to strive for positive change using tech. I love reading, learning and sharing innovative ideas. </p>
+        <p>My name is Okafor Ezinwanne Destiny, I am currently an undergraduate of Microbiology from the University of Nigeria Nsukka. I have basic knowledge in tech, currently I am learning web development with Codevixen academy and it has being an amzing journey so far. My aspiration is to one day be able to make a positive impact in the world using tech. In the next five years, I see myself doing amazing things using tech, I see myself solving problems and helping humanity using tech and also with my knowledge of microbilogy. My plans for myself in the tech field is to keep improving, keep becoming better and continue to strive for positive change using tech. I love reading, learning and sharing innovative ideas. </p>
     </body>
 </html>
